# ChangeLog for x11-apps/xsm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xsm/ChangeLog,v 1.15 2007/08/01 23:28:37 dberkholz Exp $

  01 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; xsm-1.0.1.ebuild:
  (#158056) Make sure /usr/libdir/X11/xsm isn't a symlink.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xsm-1.0.1.ebuild:
  Make description a little better.

  07 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xsm-1.0.1.ebuild:
  (#150334) The default Xsession script uses this; keyword as needed.

  30 Jul 2006; Stefaan De Roeck <stefaan@gentoo.org> xsm-1.0.1.ebuild:
  Keyword ~alpha

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> xsm-1.0.1.ebuild:
  Added ~ppc64

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> -xsm-0.99.3.ebuild,
  -xsm-1.0.0.ebuild:
  Pull old versions.

*xsm-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; +xsm-1.0.1.ebuild:
  Bump for 7.0.

*xsm-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> +xsm-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; -xsm-0.99.0.ebuild,
  -xsm-0.99.1.ebuild, -xsm-0.99.2.ebuild:
  Pull old versions.

*xsm-0.99.3 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> +xsm-0.99.3.ebuild:
  Bump for 7.0RC3.

*xsm-0.99.2 (11 Nov 2005)

  11 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org> +xsm-0.99.2.ebuild:
  Bump for 7.0RC2.

*xsm-0.99.1 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; +xsm-0.99.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xsm-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).

*xsm-0.99.0 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; +xsm-0.99.0.ebuild:
  Initial commit for modular X.
