@@ -1,4 +1,5 @@
 DIST xsm-1.0.1.tar.bz2 116875 RMD160 9b70c7610a741d2026323cdc97c8eba63d9dc74c SHA1 7fca1397b86cc9e8763c73eef9a1c41340040a69 SHA256 2f2535b5394d59be0a4bb15c12ea1b19b873a0096446ecc4c71aa81f0d99b29a
+EBUILD xsm-1.0.1-r1.ebuild 795 RMD160 5824c63e669b16c1204096876934f09ab508c347 SHA1 910c48d932a58e5d4fb5062b66aa98aa4ccdf974 SHA256 fec325da4d177d4985b3a1ab7e6a025cb15eeef8fff218301ee740bde16c37d2
 EBUILD xsm-1.0.1.ebuild 923 RMD160 d2b58e989d9b22d013fdb5559910593b9283aa19 SHA1 6e39c6043340f96cb6d9265b5672795b9d9df5c6 SHA256 71b2166085cd7ee8a98d8d37af33997b193d9298e07817afb8bec370fac2afa9
-MISC ChangeLog 1965 RMD160 c5a22dfb433ab8f9670d93b2dc33fca0b041c991 SHA1 e303c51e6e65870290534b689dc63f402b8dd435 SHA256 1bea990adbde0c85deb8071d2b29ead54ff7d43ffcfae1d7b448118867427419
+MISC ChangeLog 2101 RMD160 c3b919b7ef0df079df49780106b7fdf83ca3af1f SHA1 509b3ba73b5ee138053f0c7916f58cf4746ff2e7 SHA256 a18a6426f11f7602cfa1ba339a7236ffd82253fb00249aa3d460f093000b1fd5
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
