@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xsm
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xsm/ChangeLog,v 1.15 2007/08/01 23:28:37 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xsm/ChangeLog,v 1.16 2009/01/14 13:10:24 remi Exp $
+
+*xsm-1.0.1-r1 (14 Jan 2009)
+
+  14 Jan 2009; Rémi Cardona <remi@gentoo.org> +xsm-1.0.1-r1.ebuild:
+  remove xprint support (see bug #254874)
 
   01 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; xsm-1.0.1.ebuild:
   (#158056) Make sure /usr/libdir/X11/xsm isn't a symlink.
